[package]
name = "grrs"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your@email.com>"]
license = "MIT OR Apache-2.0"
description = "A tool to search files"
readme = "README.md"
homepage = "https://github.com/you/grrs"
repository = "https://github.com/you/grrs"
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# ここに.rsファイルで使用するライブラリを記述
[dependencies]
clap = { version = "3.2.6", features = ["derive"] }
anyhow = "1.0"
